welcome.lessons.welcome.array.array123.Array123.scala.error
array123:4: error: value unary_! is not a member of Int
      if (!nums.length >= i+3) {
          ^array123:9: error: type mismatch;
 found   : Boolean
 required: Int
          if (nums(i+2 == 3)) {
                       ^